feat(*): fix bugs,periodic information conditional query, more detailed information on nft transactions
